Problem with the "Use Object Material" setting in Dynamic Paint #38267

Closed
opened 2014-01-18 10:00:15 +01:00 by Garrett · 6 comments

System Information

OS: Ubuntu 13.10
Linux kernel: 3.11.0-15-generic

Graphics:
VGA compatible controller: Intel Corporation 4th Gen Core Processor Integrated Graphics Controller (rev 06)
3D controller: NVIDIA Corporation GK107M [GeForce GT 750M] (rev a1)

Blender Version
Broken: 2.69.0 r60991 and 2.69-96e9c67

Short description of error

I'm using Dynamic Paint with the "Use Object Material" setting for the brush and a green material chosen. However, when I hit "Bake Image Sequence", the .png files that are generated just have the default blue color, instead of the green material.

The error only occurs with this particular .blend file, ie when I start a new .blend file and follow the same steps, it works fine.

Exact steps for others to reproduce the error
Open the attached .blend file, make sure that the plane is selected, then under the Physics tab of the Properties window, hit "Bake Image Sequence". Take a look at the .png files generated to see they have no green in them.

prob_with_paint.blend

**System Information** OS: Ubuntu 13.10 Linux kernel: 3.11.0-15-generic Graphics: VGA compatible controller: Intel Corporation 4th Gen Core Processor Integrated Graphics Controller (rev 06) 3D controller: NVIDIA Corporation GK107M [GeForce GT 750M] (rev a1) **Blender Version** Broken: 2.69.0 r60991 and 2.69-96e9c67 **Short description of error** I'm using Dynamic Paint with the "Use Object Material" setting for the brush and a green material chosen. However, when I hit "Bake Image Sequence", the .png files that are generated just have the default blue color, instead of the green material. The error only occurs with this particular .blend file, ie when I start a new .blend file and follow the same steps, it works fine. **Exact steps for others to reproduce the error** Open the attached .blend file, make sure that the plane is selected, then under the Physics tab of the Properties window, hit "Bake Image Sequence". Take a look at the .png files generated to see they have no green in them. [prob_with_paint.blend](https://archive.blender.org/developer/F70109/prob_with_paint.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Garrett-8

Added subscriber: @Garrett-8

This issue was referenced by blender/blender-addons-contrib@f074b67108

This issue was referenced by blender/blender-addons-contrib@f074b67108b8f5759dbc9147d4e0bdc0cb6f3c2a

This issue was referenced by f074b67108

This issue was referenced by f074b67108b8f5759dbc9147d4e0bdc0cb6f3c2a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit f074b67108.

Closed by commit f074b67108.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38267
No description provided.