Fix T38267: dynamic paint Use Object Material not working correct in some cases.